removed unused lines

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="COUNTRY"
+            android:text="@string/country"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/loading_circle"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="last updated at 12.32pm"
+            android:text="@string/last_updated_at_12_32pm"
             android:textColor="@color/S500"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="4500000"
+                android:text="@string/_4500000"
                 android:textColor="#FABE4E"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -83,7 +83,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Total Cases"
+                android:text="@string/total_cases"
                 android:textColor="#FABE4E"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -109,7 +109,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="42000"
+                android:text="@string/_42000"
                 android:textColor="#67B857"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -124,7 +124,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Recovered"
+                android:text="@string/recovered"
                 android:textColor="#67B857"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -150,7 +150,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="320"
+                android:text="@string/_320"
                 android:textColor="#D246F7"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -165,7 +165,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Deaths"
+                android:text="@string/deaths"
                 android:textColor="#D246F7"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -190,7 +190,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
-                android:text="Filter By"
+                android:text="@string/filter_by"
                 android:textColor="#8852FC"
                 app:chipBackgroundColor="#1C1133"
                 app:layout_constraintStart_toStartOf="parent"
@@ -218,6 +218,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="@string/filter_by"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/spacing1"
                     android:src="@drawable/ic_outline_cancel_24"
@@ -228,7 +229,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/spacing3"
-                    android:text="Clear Filters"
+                    android:text="@string/clear_filters"
                     android:textColor="@color/white" />
             </androidx.cardview.widget.CardView>
 
@@ -265,7 +266,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:text="COUNTRY"
+                    android:text="@string/country"
                     android:textAlignment="center"
                     android:textColor="#1AAABA"
                     android:textSize="12sp"
@@ -281,7 +282,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="TOTAL CASES"
+                    android:text="@string/total_cases_u"
                     android:textAlignment="center"
                     android:textColor="#1AAABA"
                     android:textSize="12sp"
@@ -297,7 +298,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="DEATHS"
+                    android:text="@string/deaths_u"
                     android:textAlignment="center"
                     android:textColor="#1AAABA"
                     android:textSize="12sp"
@@ -312,7 +313,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="RECOVERED"
+                    android:text="@string/recovered_u"
                     android:textAlignment="center"
                     android:textColor="#1AAABA"
                     android:textSize="12sp"
@@ -353,7 +354,7 @@
             android:id="@+id/change_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Location"
+            android:text="@string/change_location"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
