--- a/app/src/main/res/layout/dailog_filter.xml
+++ b/app/src/main/res/layout/dailog_filter.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="Total Cases between"
+        android:text="@string/total_cases_between"
         android:textColor="#d81b60"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="TO"
+        android:text="@string/to"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="Total Deaths between"
+        android:text="@string/total_deaths_between"
         android:textColor="#d81b60"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="TO"
+        android:text="@string/to"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -151,7 +151,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="Total Recovered between"
+        android:text="@string/total_recovered_between"
         android:textColor="#d81b60"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -184,7 +184,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="TO"
+        android:text="@string/to"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         android:textStyle="bold"
