--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -49,19 +49,21 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:textSize="12sp"
-            android:drawableLeft="@drawable/ic_baseline_my_location_24"
+            android:drawableStart="@drawable/ic_baseline_my_location_24"
             android:drawableTint="@color/white"
-            android:text="Current Location"
+            android:text="@string/current_location"
             android:visibility="visible"
             map:layout_constraintEnd_toEndOf="parent"
             map:layout_constraintHorizontal_bias="1.0"
             map:layout_constraintStart_toEndOf="@+id/linearLayout15"
-            map:layout_constraintTop_toTopOf="parent" />
+            map:layout_constraintTop_toTopOf="parent"
+            tools:targetApi="m" />
 
         <ImageView
             android:id="@+id/imgLocationPinUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/pin"
             android:src="@drawable/image_pin"
             android:visibility="visible"
             map:layout_constraintBottom_toBottomOf="parent"
@@ -81,7 +83,7 @@
             android:textStyle="bold"
             android:textColor="#368CD9"
             android:visibility="gone"
-            android:text="Sanpada"
+            android:text="@string/sanpada"
             map:layout_constraintBottom_toTopOf="@+id/tv_address"
             map:layout_constraintStart_toStartOf="parent" />
 
@@ -93,7 +95,7 @@
             android:layout_marginBottom="8dp"
             android:textSize="16sp"
             android:textColor="@color/text_color"
-            android:text="Sector 5, Plot no 66 sads dwdx ewwsd ew"
+            android:text="@string/sector_5_plot_no_66_sads_dwdx_ewwsd_ew"
             android:visibility="gone"
             map:layout_constraintBottom_toTopOf="@+id/set_location"
             map:layout_constraintStart_toStartOf="parent" />
@@ -105,7 +107,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="Set Location"
+            android:text="@string/set_location"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
             map:layout_constraintStart_toStartOf="parent" />
