--- a/app/src/main/res/layout/custom_search_lay.xml
+++ b/app/src/main/res/layout/custom_search_lay.xml
@@ -18,6 +18,7 @@
 
         <ImageView
             android:layout_width="18dp"
+            android:contentDescription="@string/search"
             android:layout_gravity="center"
             android:layout_height="18dp"
             android:src="@drawable/ic_search" />
@@ -28,7 +29,7 @@
             android:layout_gravity="center"
             android:textSize="16sp"
             android:layout_marginStart="@dimen/spacing2"
-            android:text="Search for Place"
+            android:text="@string/search_for_place"
             android:textColor="@color/text_color_2" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
