--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -23,17 +24,18 @@
         <TextView
             android:id="@+id/figure_1"
             android:layout_width="0dp"
-            android:paddingLeft="@dimen/spacing3"
+            android:paddingStart="@dimen/spacing3"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="COUNTRY"
+            android:text="@string/country"
             android:textColor="#29B7C1"
             android:textAlignment="textStart"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@id/figure_2"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/figure_2"
@@ -41,15 +43,16 @@
             android:textColor="#29B7C1"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:paddingLeft="@dimen/spacing2"
+            android:paddingStart="@dimen/spacing2"
             android:layout_marginEnd="8dp"
-            android:text="TOTAL "
+            android:text="@string/total"
             android:textAlignment="textStart"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@id/figure_3"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/figure_1"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/figure_3"
@@ -57,29 +60,31 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingLeft="@dimen/spacing5"
-            android:text="DEATHS"
+            android:paddingStart="@dimen/spacing5"
+            android:text="@string/deaths_u"
             android:textColor="#29B7C1"
             android:textAlignment="textStart"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@id/figure_4"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/figure_2"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/figure_4"
-            android:paddingLeft="@dimen/spacing3"
+            android:paddingStart="@dimen/spacing3"
             android:textColor="#29B7C1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="RECOVERED"
+            android:text="@string/recovered_u"
             android:textAlignment="textStart"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/figure_3"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
